# SpaceRoyale

./: .gitignore  .gitpod.yml  Cargo.toml  a  index.html  rust-toolchain.toml  space_royale-4368df348305787e.js  space_royale-de54e4a89860e2ce.js  todo
.cargo/: config.toml
.github/workflows/: deploy-page.yaml
api/: wasm.js
assets/: asset_extractor.py
src/: generate_map.rs  helper.rs  main.rs  map.rs  network.rs  planet.rs  player.rs  replicon_components.rs  thrust.rs
src/network/: channels_config.rs  helper.rs  mod.rs  tick.rs
src/network/events/: client.rs  server.rs
