[package]
name = "space_royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Remove dynamic_linking feature on release
bevy = { version = "0.12" }
bevy_particle_systems = "0.11"
# bevy-inspector-egui = "0.21.0"
# bevy_hanabi = "0.8.0"
bevy_xpbd_2d = { version = "0.3", default-features = false, features = [ "2d", "f64" ] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
