[package]
name = "space_royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
# TODO: Remove dynamic_linking feature on release
bevy = { version = "0.12" }
bevy_particle_systems = "0.11"
bevy_replicon = { git = "https://github.com/Zackaryia/bevy_replicon", branch = "test" }
# bevy-inspector-egui = "0.21.0"
# bevy_hanabi = "0.8.0"
bevy_xpbd_2d = { version = "0.3", default-features = false, features = [ "2d", "f64" ] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3.1"
serde = { version = "1", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
